[workspace]
members = ["example", "jieto-db","jieto-web"]

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.28"
async-trait = "0.1.89"
toml = "0.9.8"
urlencoding = "2.1.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "uuid"] }
deadpool-redis = "0.22.0"
num_cpus = "1.17.0"
secrecy = "0.10.3"
paste = "1.0.15"
time = { version = "0.3.44", features = ["formatting", "local-offset"] }
flexi_logger = "0.31.7"
actix-web = "4"
