[package]
name = "jieto-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true }
actix-ws = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "macros"] }